# xiaocars

./: .gitignore  LICENSE  README.md  build.sh  ros2-cli-commands.txt
.devcontainer/: Dockerfile  devcontainer.json
cars/xiaoduckie/: CMakeLists.txt  package.xml
cars/xiaoduckie/include/xiaoduckie/: create_nodes.h  differential_drive_controller.h  wheels_driver.h  xiaoduckie.h
cars/xiaoduckie/src/: create_nodes.cc  differential_drive_controller.cc  main.cc  wheels_driver.cc  xiaoduckie.cc
control/: CMakeLists.txt  package.xml
control/include/control/: differential_drive_controller.h
control/include/control/motor/: driver.h
control/launch/: wheels.driver.launch.py
control/src/: differential_drive_controller.cc  motor_control_functional_test.cc  wheels_driver_node.cc  wheels_driver_node.h
control/src/motor/: driver.cc
devices/: CMakeLists.txt  package.xml
devices/include/devices/: constants.h  hat.h  motor.h  motor_template.h  wheels_driver.h
devices/include/devices/gpio/: constants.h  i2c.h  pwm.h
devices/src/: hat.cc  motor.cc  wheels_driver.cc
devices/src/gpio/: i2c.cc  pwm.cc
sensors/: CMakeLists.txt  package.xml
sensors/include/sensors/: callback.h  wheel_encoder.h
sensors/src/: wheel_encoder.cc
sensors/src/wheel_encoder/: wheel_encoder.cc
xiaocar_msgs/: CMakeLists.txt  package.xml
