cmake_minimum_required(VERSION 3.8)
project(devices)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_components REQUIRED)
find_package(std_msgs REQUIRED)

find_package(JetsonGPIO REQUIRED)

include_directories(
  include
  ${colcon_INCLUDE_DIRS}
)

add_library(
  ${PROJECT_NAME} SHARED
  src/hat.cc
  src/motor.cc
  src/gpio/i2c.cc
  src/gpio/pwm.cc
)

target_include_directories(
  ${PROJECT_NAME} PUBLIC
  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
  "$<INSTALL_INTERFACE:include>"
)

target_link_libraries(${PROJECT_NAME} 
  i2c
)

ament_target_dependencies(${PROJECT_NAME}
  rclcpp
  std_msgs

  JetsonGPIO
)

ament_export_include_directories(include)
ament_export_libraries(${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

# add_executable(wheel_encoder_test src/wheel_encoder/wheel_encoder_publisher.cc)
# ament_target_dependencies(wheel_encoder_test rclcpp std_msgs JetsonGPIO)

# add_executable(motor_test src/motor_controller/motor_controller.cc)
# ament_target_dependencies(wheel_encoder_test rclcpp std_msgs JetsonGPIO)

#=============
# Install
#=============

install(
  DIRECTORY include/
  DESTINATION include
)

install(
  TARGETS ${PROJECT_NAME}
  EXPORT export_${PROJECT_NAME}
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  RUNTIME DESTINATION bin
  INCLUDES DESTINATION include
)

# install(
#   TARGETS wheel_encoder_test
#   DESTINATION lib/${PROJECT_NAME}
# )

ament_package()
